Solve flex-information (w/ flex-wrap)

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,21 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  row-gap: 32px;
+  column-gap: 52px;
+}
+
+figure {
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+figcaption {
+  text-align: center;
 }
 
 img {
@@ -10,6 +26,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  flex-basis: 100%;
+  text-align: center;
 }
 
 /* do not edit this footer */
